; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/mac80211/extr_tx.c_ieee80211_probereq_get.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/mac80211/extr_tx.c_ieee80211_probereq_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.ieee80211_hw = type { i32 }
%struct.ieee80211_vif = type { i32* }
%struct.ieee80211_sub_if_data = type { %struct.ieee80211_local* }
%struct.ieee80211_local = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }
%struct.ieee80211_hdr_3addr = type { i32, i32*, i32, i32 }

@IEEE80211_FTYPE_MGMT = common dso_local global i32 0, align 4
@IEEE80211_STYPE_PROBE_REQ = common dso_local global i32 0, align 4
@ETH_ALEN = common dso_local global i64 0, align 8
@WLAN_EID_SSID = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.sk_buff* @ieee80211_probereq_get(%struct.ieee80211_hw* %0, %struct.ieee80211_vif* %1, i32* %2, i64 %3, i64 %4) #0 {
  %6 = alloca %struct.sk_buff*, align 8
  %7 = alloca %struct.ieee80211_hw*, align 8
  %8 = alloca %struct.ieee80211_vif*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca %struct.ieee80211_sub_if_data*, align 8
  %13 = alloca %struct.ieee80211_local*, align 8
  %14 = alloca %struct.ieee80211_hdr_3addr*, align 8
  %15 = alloca %struct.sk_buff*, align 8
  %16 = alloca i64, align 8
  %17 = alloca i32*, align 8
  store %struct.ieee80211_hw* %0, %struct.ieee80211_hw** %7, align 8
  store %struct.ieee80211_vif* %1, %struct.ieee80211_vif** %8, align 8
  store i32* %2, i32** %9, align 8
  store i64 %3, i64* %10, align 8
  store i64 %4, i64* %11, align 8
  %18 = load %struct.ieee80211_vif*, %struct.ieee80211_vif** %8, align 8
  %19 = call %struct.ieee80211_sub_if_data* @vif_to_sdata(%struct.ieee80211_vif* %18)
  store %struct.ieee80211_sub_if_data* %19, %struct.ieee80211_sub_if_data** %12, align 8
  %20 = load %struct.ieee80211_sub_if_data*, %struct.ieee80211_sub_if_data** %12, align 8
  %21 = getelementptr inbounds %struct.ieee80211_sub_if_data, %struct.ieee80211_sub_if_data* %20, i32 0, i32 0
  %22 = load %struct.ieee80211_local*, %struct.ieee80211_local** %21, align 8
  store %struct.ieee80211_local* %22, %struct.ieee80211_local** %13, align 8
  %23 = load i64, i64* %10, align 8
  %24 = add i64 2, %23
  store i64 %24, i64* %16, align 8
  %25 = load %struct.ieee80211_local*, %struct.ieee80211_local** %13, align 8
  %26 = getelementptr inbounds %struct.ieee80211_local, %struct.ieee80211_local* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = add i64 %28, 24
  %30 = load i64, i64* %16, align 8
  %31 = add i64 %29, %30
  %32 = load i64, i64* %11, align 8
  %33 = add i64 %31, %32
  %34 = call %struct.sk_buff* @dev_alloc_skb(i64 %33)
  store %struct.sk_buff* %34, %struct.sk_buff** %15, align 8
  %35 = load %struct.sk_buff*, %struct.sk_buff** %15, align 8
  %36 = icmp ne %struct.sk_buff* %35, null
  br i1 %36, label %38, label %37

37:                                               ; preds = %5
  store %struct.sk_buff* null, %struct.sk_buff** %6, align 8
  br label %94

38:                                               ; preds = %5
  %39 = load %struct.sk_buff*, %struct.sk_buff** %15, align 8
  %40 = load %struct.ieee80211_local*, %struct.ieee80211_local** %13, align 8
  %41 = getelementptr inbounds %struct.ieee80211_local, %struct.ieee80211_local* %40, i32 0, i32 0
  %42 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %41, i32 0, i32 0
  %43 = load i64, i64* %42, align 8
  %44 = call i32 @skb_reserve(%struct.sk_buff* %39, i64 %43)
  %45 = load %struct.sk_buff*, %struct.sk_buff** %15, align 8
  %46 = call i32* @skb_put(%struct.sk_buff* %45, i64 24)
  %47 = bitcast i32* %46 to %struct.ieee80211_hdr_3addr*
  store %struct.ieee80211_hdr_3addr* %47, %struct.ieee80211_hdr_3addr** %14, align 8
  %48 = load %struct.ieee80211_hdr_3addr*, %struct.ieee80211_hdr_3addr** %14, align 8
  %49 = call i32 @memset(%struct.ieee80211_hdr_3addr* %48, i32 0, i32 24)
  %50 = load i32, i32* @IEEE80211_FTYPE_MGMT, align 4
  %51 = load i32, i32* @IEEE80211_STYPE_PROBE_REQ, align 4
  %52 = or i32 %50, %51
  %53 = call i32 @cpu_to_le16(i32 %52)
  %54 = load %struct.ieee80211_hdr_3addr*, %struct.ieee80211_hdr_3addr** %14, align 8
  %55 = getelementptr inbounds %struct.ieee80211_hdr_3addr, %struct.ieee80211_hdr_3addr* %54, i32 0, i32 3
  store i32 %53, i32* %55, align 4
  %56 = load %struct.ieee80211_hdr_3addr*, %struct.ieee80211_hdr_3addr** %14, align 8
  %57 = getelementptr inbounds %struct.ieee80211_hdr_3addr, %struct.ieee80211_hdr_3addr* %56, i32 0, i32 2
  %58 = load i32, i32* %57, align 8
  %59 = call i32 @eth_broadcast_addr(i32 %58)
  %60 = load %struct.ieee80211_hdr_3addr*, %struct.ieee80211_hdr_3addr** %14, align 8
  %61 = getelementptr inbounds %struct.ieee80211_hdr_3addr, %struct.ieee80211_hdr_3addr* %60, i32 0, i32 1
  %62 = load i32*, i32** %61, align 8
  %63 = load %struct.ieee80211_vif*, %struct.ieee80211_vif** %8, align 8
  %64 = getelementptr inbounds %struct.ieee80211_vif, %struct.ieee80211_vif* %63, i32 0, i32 0
  %65 = load i32*, i32** %64, align 8
  %66 = load i64, i64* @ETH_ALEN, align 8
  %67 = call i32 @memcpy(i32* %62, i32* %65, i64 %66)
  %68 = load %struct.ieee80211_hdr_3addr*, %struct.ieee80211_hdr_3addr** %14, align 8
  %69 = getelementptr inbounds %struct.ieee80211_hdr_3addr, %struct.ieee80211_hdr_3addr* %68, i32 0, i32 0
  %70 = load i32, i32* %69, align 8
  %71 = call i32 @eth_broadcast_addr(i32 %70)
  %72 = load %struct.sk_buff*, %struct.sk_buff** %15, align 8
  %73 = load i64, i64* %16, align 8
  %74 = call i32* @skb_put(%struct.sk_buff* %72, i64 %73)
  store i32* %74, i32** %17, align 8
  %75 = load i32, i32* @WLAN_EID_SSID, align 4
  %76 = load i32*, i32** %17, align 8
  %77 = getelementptr inbounds i32, i32* %76, i32 1
  store i32* %77, i32** %17, align 8
  store i32 %75, i32* %76, align 4
  %78 = load i64, i64* %10, align 8
  %79 = trunc i64 %78 to i32
  %80 = load i32*, i32** %17, align 8
  %81 = getelementptr inbounds i32, i32* %80, i32 1
  store i32* %81, i32** %17, align 8
  store i32 %79, i32* %80, align 4
  %82 = load i64, i64* %10, align 8
  %83 = icmp ne i64 %82, 0
  br i1 %83, label %84, label %89

84:                                               ; preds = %38
  %85 = load i32*, i32** %17, align 8
  %86 = load i32*, i32** %9, align 8
  %87 = load i64, i64* %10, align 8
  %88 = call i32 @memcpy(i32* %85, i32* %86, i64 %87)
  br label %89

89:                                               ; preds = %84, %38
  %90 = load i64, i64* %10, align 8
  %91 = load i32*, i32** %17, align 8
  %92 = getelementptr inbounds i32, i32* %91, i64 %90
  store i32* %92, i32** %17, align 8
  %93 = load %struct.sk_buff*, %struct.sk_buff** %15, align 8
  store %struct.sk_buff* %93, %struct.sk_buff** %6, align 8
  br label %94

94:                                               ; preds = %89, %37
  %95 = load %struct.sk_buff*, %struct.sk_buff** %6, align 8
  ret %struct.sk_buff* %95
}

declare dso_local %struct.ieee80211_sub_if_data* @vif_to_sdata(%struct.ieee80211_vif*) #1

declare dso_local %struct.sk_buff* @dev_alloc_skb(i64) #1

declare dso_local i32 @skb_reserve(%struct.sk_buff*, i64) #1

declare dso_local i32* @skb_put(%struct.sk_buff*, i64) #1

declare dso_local i32 @memset(%struct.ieee80211_hdr_3addr*, i32, i32) #1

declare dso_local i32 @cpu_to_le16(i32) #1

declare dso_local i32 @eth_broadcast_addr(i32) #1

declare dso_local i32 @memcpy(i32*, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
